<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.session.SessionFragment" >

    

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_view_session_exercise_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32dp" />

        <TextView
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/text_view_session_weight"
            android:textSize="32dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_session_decrease_weight_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:text="@string/btn_minus_symbol" />

            <TextView
                android:id="@+id/text_view_session_weight_value"
                android:layout_width="wrap_content"
                android:layout_height="93dp"
                android:gravity="center"
                android:textSize="32dp" />

            <Button
                android:id="@+id/btn_session_increase_weight_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:text="@string/btn_plus_symbol" />
        </LinearLayout>

        <TextView
            android:id="@+id/reps"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/text_view_session_reps"
            android:textSize="32dp" />

        <TextView
            android:id="@+id/text_view_session_reps_value"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:gravity="center"
            android:textSize="32dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Sets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_view_nr_sets" />

            <TextView
                android:id="@+id/text_view_session_sets_value"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/BreakTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_view_session_breaktime" />

            <TextView
                android:id="@+id/text_view_session_break_time_value"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout4">


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_session_previous_Exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="30dp"
            android:clickable="true"
            android:src="@android:drawable/ic_media_previous" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_session_save_session"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginLeft="30dp"
            android:src="@android:drawable/ic_menu_save" />



        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_session_start_Exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_weight="1"
            android:clickable="true"
            android:src="@android:drawable/ic_media_pause" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_session_next_Exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginBottom="30dp"
            android:clickable="true"
            android:src="@android:drawable/ic_media_next" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>